# hf-mirror-site

./: .gitignore  README.md  pyproject.toml  setup.py
bayes_hub/: README.md  __init__.py  cli.py
scripts/: batch_download_datasets.py  download.py  fetch_dataset_ids.py  lfs_cache_proxy.py  retry_failed.py
scripts/caddy/: .env.template  Caddyfile  Caddyfile.local  hf-mirror.com.Caddyfile  lfs.hf-mirror.com.Caddyfile
