[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-hub"
version = "0.1.0"
description = "A wrapper for huggingface-hub that defaults to a local mirror"
dependencies = [
    "huggingface-hub==0.21.4",
]

[project.scripts]
bayes-hub-cli = "bayes_hub.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bayes_hub*"]
